[project]
name = "memorycast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "mlforecast>=1.0.31",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "statsforecast>=2.0.2",
    "streamlit>=1.56.0",
]
